# taskforge

./: .gitignore  AGENTS.md  ReadMe.md  pyproject.toml
app/controllers/: ProjectController.py  TicketController.py  __init__.py
app/controllers/auth/: HomeController.py
app/models/: Project.py  Ticket.py  TicketHistory.py
databases/migrations/: 2025_09_14_000001_create_tickets_table.py  2025_09_14_005414_create_tickets_table.py  2025_09_15_021533_create_ticket_histories_table.py  2025_09_16_005735_create_projects_table.py  2025_09_16_005804_add_project_id_to_tickets_table.py
plans/: history.md  kanban.md  projects.md  tickets.md
routes/: web.py
templates/: base.html
templates/auth/: home.html
templates/projects/: board.html  create.html  edit.html  index.html  show.html
templates/tickets/: create.html  edit.html  index.html  show.html
tests/: __init__.py  conftest.py
tests/unit/: test_project_routes.py  test_ticket_history.py  test_tickets.py
