[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '(\.git|\.venv|\.idea|templates|resources|storage|databases\/migrations|node_modules)'

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]

[project]
name = "taskforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "masonite>=4.0,<5.0",
    "masonite-orm>=2.0,<3.0",
]
